# myROS

./: .gitignore
my_test/src/imu_publish/: main.cpp
my_test/src/imu_publish/saber_ros_src/: saber_config.cpp
myrobot_ws/: autostart.sh
myrobot_ws/PaxHeader/: ╨▐╕─╚╒╝╟20190329
myrobot_ws/src/: │г╙├╓╕┴ю
myrobot_ws/src/PaxHeader/: │г╙├╓╕┴ю
myrobot_ws/src/imu/lpms_imu-master/launch/: imu.launch
myrobot_ws/src/imu/lpms_imu-master/src/: lpms_imu_node.cpp
myrobot_ws/src/laser/: CMakeLists.txt  package.xml  ╡ў╩╘╝╟┬╝
myrobot_ws/src/laser/PaxHeader/: ╝д╣т▓т╛р─г┐щ═и╨┼╨н╥щ.doc  ╡ў╩╘╝╟┬╝
myrobot_ws/src/laser/launch/: find_object_2d.launch
myrobot_ws/src/laser/src/: serial.cpp
myrobot_ws/src/mobot6_interface/: CMakeLists.txt  package.xml
myrobot_ws/src/mobot6_interface/include/mobot6_interface/: Client_Thread.h  Revmsgs_Socket.h  Sendmsgs_Socket.h  Server_Thread.h  control_flag.h  heartbeat_recv_socket.h  heartbeat_recv_thread.h  heartbeat_send_socket.h  heartbeat_send_thread.h  socket_node.hpp
myrobot_ws/src/mobot6_interface/include/socket_send/: Sendmsgs_Socket.h  Server_Thread.h  control_flag.h  socket_node.hpp
myrobot_ws/src/mobot6_interface/launch/: heart.launch  nuclear.launch  socket.launch  test5.launch  test6.launch  test_move_base.launch  │г╙├╓╕┴ю
myrobot_ws/src/mobot6_interface/launch/PaxHeader/: │г╙├╓╕┴ю
myrobot_ws/src/mobot6_interface/meshes/: 11_arm_base_link.STL  14_arm_bigarm_linear.STL  17_arm_wrist_pitch.STL  gripper_rod_right1.STL  gripper_tip_left.STL  swingarm_left.STL  swingarm_right.STL  wheel_lf.STL  wheel_rf.STL
myrobot_ws/src/mobot6_interface/msg/: ArmControl.msg  GripControl.msg  Intensity.msg  InterfaceJointVel.msg  Keyboard.msg  KeyboardNuclear.msg  PointIntensity.msg  RobotStatus.msg  SwingControl.msg  command_list.msg  heart_reconnection.msg
myrobot_ws/src/mobot6_interface/rviz/: moveit.rviz
myrobot_ws/src/mobot6_interface/scripts/: mobot6_keyboard.py  mobot6_keyboard_nuclear.py
myrobot_ws/src/mobot6_interface/socket_send/: Sendmsgs_Socket.cpp  main.cpp  moc_Server_Thread.cpp
myrobot_ws/src/mobot6_interface/socket_src/: Revmsgs_Socket.cpp  heartbeat_recv_socket.cpp  heartbeat_send_socket.cpp  main.cpp  moc_Client_Thread.cpp  moc_Server_Thread.cpp  moc_heartbeat_recv_thread.cpp  moc_heartbeat_send_thread.cpp
myrobot_ws/src/mobot6_interface/src/: fake6_joint_states_arm.cpp  fake_joint_states_vehicle.cpp  include_test.cpp  joint6_states_blend.cpp  mobot6_interface.cpp  mobot6_manipulator.cpp  mobot6_preprocess_key.cpp  mobot6_preprocess_qt.cpp  monotonecubicinterpolation.h  node6_check.cpp  nuclear_preprocess_key.cpp  vehicle61_coordinator.cpp  vehicle61_interface.cpp  vehicle_vel_rvel.cpp  ╨▐╕─
myrobot_ws/src/mobot6_interface/src/PaxHeader/: ╨▐╕─
myrobot_ws/src/mobot6_interface/urdf/: myrobot_20171128.urdf
myrobot_ws/src/mobot6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
myrobot_ws/src/mobot6_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  move_vehicle.srdf
myrobot_ws/src/mobot6_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_vehicle_moveit_controller_manager.launch.xml  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
myrobot_ws/src/test_nuclear/: CMakeLists.txt  package.xml  │г╙├╓╕┴ю
myrobot_ws/src/test_nuclear/PaxHeader/: │г╙├╓╕┴ю
myrobot_ws/src/test_nuclear/src/: navigation_generator.cpp  nuclear_coordinator.cpp  nuclear_interface.cpp  save_file.cpp  serial_node.cpp
p3tx/src/pioneer_p3dx_model/p3dx_navigation/maps/: mymap.pgm
robotWithArm/: .ycm_extra_conf.py
ros1/src/mobot_gazebo_ws/: 常用指令
ros1/src/mobot_gazebo_ws/src/mobot_control/: CMakeLists.txt  package.xml
ros1/src/mobot_gazebo_ws/src/mobot_control/config/: vehicle_control (复件).yaml  vehicle_control.yaml
ros1/src/mobot_gazebo_ws/src/mobot_control/launch/: test5.launch  vehicle_control.launch
ros1/src/mobot_gazebo_ws/src/mobot_control/msg/: InterfaceJointVel.msg  Keyboard.msg
ros1/src/mobot_gazebo_ws/src/mobot_control/rviz/: mobot.rviz
ros1/src/mobot_gazebo_ws/src/mobot_control/scripts/: gazebo_keyboard.py
ros1/src/mobot_gazebo_ws/src/mobot_control/src/: joint_states_combined.cpp  mobot_gazebo_interface.cpp  mobot_gazebo_manipulator.cpp  mobot_gazebo_preprocess_key.cpp  vehicle_gazebo_coordinator.cpp  vehicle_gazebo_interface.cpp
ros1/src/mobot_gazebo_ws/src/mobot_description/: CMakeLists.txt  package.xml
test_gazebo/: terrain.world  test2 README.txt  volcano.world  volcano2.world
test_gazebo2/project1/: terrain.world  test2 README.txt
test_ros/: .ycm_extra_conf.py
test_ros/src/dvrk_model/launch/: arm_rviz.launch
test_ros/src/husky_ur_robot/husky_control/: package.xml
test_ros/src/husky_ur_robot/husky_ur_description/: CMakeLists.txt  package.xml
test_ros/src/husky_ur_robot/husky_ur_gazebo/: CMakeLists.txt  package.xml
test_ros/src/husky_ur_robot/husky_ur_viz/: CMakeLists.txt  package.xml
test_ros/src/test_rviz/: CMakeLists.txt  package.xml
test_solidworks_gazebo/stl_test/: model.config  model.sdf
test_solidworks_gazebo/stl_test/meshes/: map_sw.STL  wheel_lb.STL
tmp/: .setup_assistant  CMakeLists.txt  package.xml
tmp/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  single_axis.srdf
tmp/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  single_axis_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
(+64 files in other folders)
